modified link to resume

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="row justify-content-center">
 
                     <a class="btn btn-outline-success btn-lg"
-                        href="https://github.com/aaronchu415/aaronchu415.github.io/raw/master/resume.pdf"
+                        href="https://github.com/aaronchu415/aaronchu415.github.io/raw/master/resumeCensored.pdf"
                         role="button">Download</a>
 
                 </div>
